@@ -18,30 +18,17 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
-    # - name: checkout the repo
-    #   uses: actions/checkout@v3
-    #   with:
-    #     path: main
-    # - uses: actions/setup-python@v4
-    #   with:
-    #     python-version: '3.10'
-    #     cache: 'pip' # caching pip dependencies
-    # - name: Install Python dependencies
-    #   uses: py-actions/py-dependency-install@v4
-    # - name: Install Python dev dependencies
-    #   uses: py-actions/py-dependency-install@v4
-    #   with:
-    #     path: "requirements-dev.txt"
     - name: Generate static files
       run: |
         make doc
-    - name: Init new repo in dist folder and commit generated files
+    - name: Init new repo in docs/build/html folder and commit generated files
       run: |
         cd docs/build/html
         git init
         git add -A
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git config --global --add safe.directory /github/workspace
         git commit -m 'deploy'
     - name: Force push to destination branch
       uses: ad-m/github-push-action@v0.5.0
